# mirror

./: .gitignore  CITATION.cff  LICENSE  README.md  SHA256SUMS  pyproject.toml
artifacts/paper_results/: EXPERIMENT_RESULTS_FULL_CANONICAL.tex
configs/: paper_config.json
docs/: ARTIFACTS.md  REPRODUCIBILITY.md  RESPONSIBLE_USE.md
scripts/: check_release.py  compute_metrics_from_jsonl.py  verify_paper_tables.py
src/mirror/: __init__.py  canonicalize.py  mcts.py  metrics.py  novelty.py  tables.py
tests/: test_canonicalize.py  test_metrics.py  test_tables.py
