[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror-redteam"
version = "0.1.0"
description = "Reproducibility utilities for MIRROR, a novelty-constrained memory-guided MCTS red-teaming framework for agentic RAG."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Inderjeet Singh", email = "inderjeet.singh@fujitsu.com"}
]
dependencies = []

[project.urls]
Repository = "https://github.com/FujitsuResearch/mirror"
Dataset = "https://huggingface.co/datasets/Fujitsu/agentic-rag-redteam-bench"

[tool.setuptools.packages.find]
where = ["src"]
